...
    if (error.isNotEmpty()) {
        ErrorColumn(error = error)
    } else {
        LazyColumn(
            modifier = Modifier
                .fillMaxWidth()
                .testTag("home_screen"),
            contentPadding = PaddingValues(24.dp),
            verticalArrangement = Arrangement.Top
        ) {
            item {
                HomeBanner(
                    modifier = Modifier.testTag("home_banner")
                )
            } // banner
            item {
                Spacer(modifier = Modifier.height(24.dp))
                PropertySearchBox(
                    Modifier.testTag("home_search"),
                    proTypeOptions = viewModel.listPropertyType,
                    onProTypeSelected = { viewModel.selectedPropertyType.value = it },
                    selectedProType = viewModel.selectedPropertyType.value,
                    listingTypeOptions = viewModel.listListingType,
                    onListingTypeSelected = { viewModel.selectedListingType.value = it },
                    selectedListingType = viewModel.selectedListingType.value,
...
