package com.cinurawa.propertioid.utils.enum

enum class ListingType(val value: String) {
    Beli("Beli"),
    Sewa("Sewa"),
}
