package com.cinurawa.propertioid.utils

enum class Type(val value: String) {
    Apartemen("Apartemen"),
    Gudang("Gudang"),
    Kondominium("Kondominium"),
    Kosan("Kosan"),
    Pabrik("Pabrik"),
    Perkantoran("Perkantoran"),
    RuangUsaha("Ruang Usaha"),
    Ruko("Ruko"),
    Rumah("Rumah"),
    RumahKuno("Rumah Kuno"),
    Tanah("Tanah"),
    Villa("Villa"),
}